@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* rename Model.getProperties() to getConnectProperties()
+	deprecated version is provided
 * flush sequences in checkEmptySchema, fixes CopeTest
 * remove Model.flushSequences()
 	deprecated version is provided
